Refactored core functions into separate files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(ConnectFour)
 
 add_subdirectory(SDL EXCLUDE_FROM_ALL)
 
-add_executable(ConnectFour main.cpp)
+add_executable(ConnectFour main.cpp core.cpp)
+
+target_include_directories(ConnectFour PRIVATE SDL/include/SDL3)
 
 target_link_libraries(ConnectFour PRIVATE SDL3::SDL3)
