Unrolled recursive get_move_score (this hurt my brain)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(SDL EXCLUDE_FROM_ALL)
 add_executable(ConnectFour main.cpp core.cpp helpers.cpp)
 target_link_libraries(ConnectFour PRIVATE SDL3::SDL3)
 target_include_directories(ConnectFour PRIVATE SDL/include/SDL3)
+target_compile_options(ConnectFour PRIVATE -Wunused-variable)
 
 add_executable(ConnectFour-Profile profile.cpp core.cpp helpers.cpp)
 target_link_libraries(ConnectFour-Profile PRIVATE SDL3::SDL3)
